--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build":"npm i && npm build",
-    "start": "sudo nodemon ./src/index.js"
+    "start": "nodemon ./src/index.js"
     
   },
   "author": "",
